<resources>
    <string name="hello_blank_fragment_chat">Hello blank fragment</string>
    <string name="select_members_chat">Select Members</string>
    <string name="select_at_least_one_contact_chat">Select at least one contact</string>
    <string name="please_grant_location_permission_chat">Please Grant Location Permission</string>
    <string name="chats_chat">Chats</string>
    <string name="message_deleted_chat">Message has been deleted</string>
    <string name="video_chat"> Video</string>
    <string name="audio_chat"> Audio</string>
    <string name="document_chat"> Document</string>
    <string name="image_chat"> Image</string>
    <string name="location_chat"> Location</string>
    <string name="offline_chat">Offline</string>
    <string name="tap_to_open_details_chat">Tap to open details</string>
    <string name="group_deactivated_by_admin_chat">This group is deactivated by admin</string>
    <string name="removed_from_group_chat">You have been removed from this group</string>
    <string name="only_admin_can_post_chat">Only admin can post in this group</string>
    <string name="you_have_blocked_chat">You\'ve blocked this contact</string>
    <string name="last_seen_today_chat">Last seen today at: </string>
    <string name="last_seen_chat">Last seen </string>
    <string name="message_chat">Message</string>
    <string name="block_chat">Block</string>
    <string name="unblock_chat">UnBlock</string>
    <string name="no_app_found_to_pick_video_chat">No App found to pick Video</string>
    <string name="no_app_found_to_pick_audio_chat">No App found to pick Audio</string>
    <string name="grant_storage_permission_chat">Please grant storage permission</string>
    <string name="unable_to_capture_and_click_chat">Unable to capture and click image</string>
    <string name="zero_contacts_selected_chat">0 Contact(s) Selected</string>
    <string name="refreshing_chat">Refreshing...</string>
    <string name="add_to_group_chat">Add To Group</string>
    <string name="contacts_synced_chat">Contacts Synced</string>
    <string name="unable_to_sync_contacts_chat">Unable to sync contacts</string>
    <string name="tap_to_select_chat">Tap to Select</string>
    <string name="grant_contacts_permission_chat">Grant contacts permission to sync contacts</string>
    <string name="coming_soon_chat">Coming soon</string>
    <string name="group_created_chat">Group Created</string>
    <string name="unable_to_create_group_chat">Unable to create group, </string>
    <string name="enter_a_group_name_chat">Please enter a group name</string>
    <string name="position_chat">   position  </string>
    <string name="unable_to_activate_group_chat">Unable to activate/deactivate group</string>
    <string name="activate_group_chat">Activate Group</string>
    <string name="unable_to_open_chat">Unable to open</string>
    <string name="enter_new_group_name_chat">Enter a new group name</string>
    <string name="change_group_name_chat">Change group name</string>
    <string name="enter_valid_group_name_chat">Please enter a valid group name</string>
    <string name="cancel_chat">Cancel</string>
    <string name="post_limited_to_admin_chat">Post limited to admins</string>
    <string name="everyone_can_post_in_group_chat">Everyone can post in group now</string>
    <string name="dismiss_as_admin_chat">Dismiss as admin</string>
    <string name="make_group_admin_chat">Make group admin</string>
    <string name="read_on_chat">Read on </string>
    <string name="message_info_chat">Message Info</string>
    <string name="viewed_by_chat">Viewed by </string>
    <string name="no_app_found_locations_chat">No App found to open location</string>
    <string name="user_reported_chat">User reported</string>
    <string name="alert_chat">Alert</string>
    <string name="unable_to_report_user_chat">Unable to report user, </string>
    <string name="select_a_reason_chat">Please select the reason</string>
    <string name="type_reason_chat">Please type the reason</string>
    <string name="share_location_chat">Share Location</string>
    <string name="_0_contacts_s_chat">0 Contacts(s)</string>
    <string name="share_chat">SHARE</string>
    <string name="you_ve_blocked_this_contact_chat">You\'ve blocked this contact</string>
    <string name="welcome_to_user_chat_chat">Welcome to User Chat</string>
    <string name="type_a_message_chat">Type a message...</string>
    <string name="this_group_is_deactivated_chat">This group is deactivated</string>
    <string name="group_controls_chat">Group Controls</string>
    <string name="only_admins_can_post_in_group_chat">Only admins can post in group</string>
    <string name="gigers_chat">Gigers</string>
    <string name="search_giger_chat">Search Giger</string>
    <string name="add_new_giger_chat">Add new Giger</string>
    <string name="deactivate_group_chat">Deactivate Group</string>
    <string name="media_chat">Media</string>
    <string name="no_chat_chat">No Chat Found!</string>
    <string name="start_chatting_chat">START CHATTING</string>
    <string name="no_chat_chat_subtitle_chat">Start chatting with other Gigforce app users added in your contacts</string>
    <string name="oops_it_looks_like_you_have_not_started_chat_with_anyone_chat">Oops…it looks like you have not started chat with anyone.</string>
    <string name="contacts_chat">Contacts</string>
    <string name="send_location_common_ui">Send Location</string>
    <string name="share_live_location_common_ui">Share Live Location</string>
    <string name="fifteen_minute_location_common_ui">15 minutes</string>
    <string name="one_hour_common_ui">1 hour</string>
    <string name="eight_hour_common_ui">8 hours</string>
    <string name="search_gigers_common_ui">Search Gigers</string>
    <string name="no_contact_found_chat">No Contact Found</string>
    <string name="it_seems_there_is_no_contact_registered_with_gigforce_chat">It seems there is no contact registered with Gigforce</string>
    <string name="invite_now_chat">Invite Now</string>
    <string name="contacts_syncing_chat">Contacts Syncing ...</string>
    <string name="please_wait_while_contacts_are_getting_synced_chat">Please wait while contacts are getting Synced</string>
    <string name="provide_read_contacts_permission_chat">Provide read contacts permission</string>
    <string name="go_to_settings_chat">Go To Settings</string>
    <string name="create_group_chat">Create Group</string>
    <string name="enter_group_name_chat">Enter a group name</string>
    <string name="create_chat">Create</string>
    <string name="report_this_user_chat">Report this User</string>
    <string name="please_let_us_know_your_reason_to_report_the_user_chat">Please let us know your reason to report the user</string>
    <string name="person_is_abusive_in_nature_chat">Person is abusive in nature</string>
    <string name="person_is_sharing_inappropriate_content_chat">Person is sharing inappropriate content</string>
    <string name="others_chat">Others</string>
    <string name="reason_chat">Reason</string>
    <string name="yes_i_confirm_that_i_want_to_report_this_user_chat">Yes, I confirm that I want to report this user</string>
    <string name="search_chat_chat">Search Chats</string>
    <string name="okay_chat">Okay</string>
    <string name="created_on_chat">Created On : </string>
    <string name="remove_chat">Remove </string>
    <string name="copy_propercase">Copy</string>
    <string name="delete_propercase">Delete</string>
    <string name="message_info">Message Info</string>
    <string name="report_and_block">Report and Block</string>
    <string name="image_propercase">Image</string>
    <string name="video_propercase">Video</string>
    <string name="document_propercase">Document</string>
    <string name="location_propercase">Location</string>
    <string name="new_group_propercase">New group</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="refresh_propercase">Refresh</string>
    <string name="message_user">Message User</string>
    <string name="make_group_admin">Make group Admin</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="share_propercase">Share</string>
    <string name="contacts_with_space"> Contact(s)</string>
    <string name="chat_settings_chat">Settings</string>
    <string name="select_chat_settings_chat">Select chat</string>
    <string name="new_group_settings_chat">New Group</string>
    <string name="chat_settings_media_and_storage_chat">Media Auto Download</string>
    <string name="community_chat">Community</string>
    <string name="sync_contacts_chat">Sync Contacts</string>
    <string name="sync_contacts_to_start_chatting_chat">Please sync contacts to start chatting.</string>
    <string name="syncing_contacts_chat">Syncing Contacts</string>
    <string name="please_be_patient_chat">Please be patient. This might take a moment.</string>
    <string name="create_new_group_chat">New Group</string>
    <string name="create_new_broadcast">New Broadcast</string>
    <string name="group_name_hint">Type group name here...</string>
    <string name="choose_photo_and_name">Choose option group photo and type group name</string>
    <string name="participants_chat">Participants</string>
    <string name="group_icon_chat">Group icon</string>
    <string name="add_subject_chat">Add Subject</string>
    <string name="mute_notifications_chat">Mute Notifications</string>
    <string name="unmute_notifications_chat">Unmute Notifications</string>
    <string name="mark_as_read_chat">Mark as Read</string>
    <string name="mark_as_unread_chat">Mark as Unead</string>
    <string name="delete_chat">Delete</string>
    <string name="chat_selected_chat">Chats Selected</string>
    <string name="single_chat_selected_chat">Chat Selected</string>
    <string name="notifications_chat">Notifications</string>
    <string name="report_user_chat">Report User</string>
    <string name="report_chat">Report</string>
    <string name="do_you_really_want_to_block_chat">Do you really want to block this contact? \n\nBlocked contact will no longer be able to send you message on Gigforce application.</string>
    <string name="select_reason_to_block_chat">Please select the reason to report this user</string>
    <string name="type_your_concern_reason">Type your concern here...</string>
    <string name="block_user_chat">Block User</string>
    <string name="unable_to_block_user">Unable to block user</string>
    <string name="contacts_selected_chat">Contact(s) Selected</string>
    <string name="forward_message_chat">Forward to</string>
    <string name="forward_message_select_contacts_chat">Select contacts</string>
    <string name="add_new_contact_chat">Add New Contact</string>
    <string name="media_and_docs_chat">Media and Docs</string>
    <string name="no_media_found_chat">No Media Found</string>
    <string name="created_by_chat">Created by</string>
    <string name="exit_group_chat">Exit Group</string>
    <string name="add_participant_chat">Add New Participant</string>
    <string name="report_one_chat">Report</string>
    <string name="exit_group_message_chat">Are you sure you want to exit this group? </string>
    <string name="delivered_on_chat">Delivered on</string>
    <string name="picker_bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="recent">Recent</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="images_selected">%s Selected</string>
    <string name="str_ok">OK</string>
    <string name="str_video_initial_time">00:00</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
</resources>