<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pick_image"
        android:title="@string/image_propercase"
        android:icon="@drawable/ic_chat_image"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_video"
        android:title="@string/video_propercase"
        android:icon="@drawable/ic_chat_video"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_document"
        android:orderInCategory="100"
        android:title="@string/document_propercase"
        android:icon="@drawable/ic_chat_document"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/location_propercase"
        android:icon="@drawable/ic_chat_location"
        app:showAsAction="collapseActionView" />

</menu>