<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bottom_sheet_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dropImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:src="@drawable/ic_block_user" />

        <TextView
            android:id="@+id/block_user_title"
            android:textColor="#202325"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:fontFamily="@font/lato_bold"
            android:lineHeight="@dimen/font_12"
            android:text="@string/block_user_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40" />

        <TextView
            android:id="@+id/block_user_subtitle"
            style="@style/body_primary"
            android:textColor="#202325"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_really_want_to_block_chat"
            android:layout_marginTop="20dp" />


        <TextView
            android:id="@+id/block_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_40"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/bottom_primary_button_background_chat"
            android:gravity="center"
            android:textAllCaps="true"
            android:fontFamily="@font/lato_bold"
            android:text="@string/block_chat"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_16"
            android:background="@drawable/bottom_secondary_button_background_chat"
            android:gravity="center"
            android:textAllCaps="true"
            android:fontFamily="@font/lato_bold"
            android:text="@string/cancel_chat"
            android:textAlignment="center"
            android:textColor="#E42C64" />




    </LinearLayout>
</layout>