<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/no_chat_gif"
        android:layout_width="216dp"
        android:layout_height="219dp"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/no_chat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center_horizontal"
        android:text="@string/no_chat_chat"
        android:textColor="@color/lipstick"
        android:textSize="22sp"
        android:fontFamily="@font/lato"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@+id/no_chat_gif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:gravity="center_horizontal"
        android:text="@string/no_chat_chat_subtitle_chat"
        android:textColor="@color/gray_400"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/no_chat_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/start_chatting"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        android:background="@drawable/bottom_primary_button_background_chat"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/lato_bold"
        android:text="@string/start_chatting_chat"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>